fixed problem with too wide submenu on tab or mobile

--- a/Styles/subpage.css
+++ b/Styles/subpage.css
@@ -88,7 +88,7 @@ span[class*="remove"] {
   right:1rem;
   font-weight: bold;
 }
-span {
+.big-photo-container span {
   color:white;
   font-size: 6rem;
 }
